--- a/src/style.css
+++ b/src/style.css
@@ -245,14 +245,13 @@ hr {
   width: 90%;
   height: 95%;
   margin: auto;
-  background: #141125; /* unified with right container */
+  background: #141125;
   border-radius: 12px;
   padding: 24px;
   border: 2px solid #201B3B;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transition: all 0.3s ease;
 }
 
 .sorting-page-left-innerbox:hover {
@@ -388,7 +387,8 @@ hr {
 }
 
 .stepbox {
-  height: 15rem;
+  min-height: 14.5rem;
+  max-height: 14.5rem;
   width: 100%;
   background-color: #1E1B2F;
   border-radius: 8px;
@@ -396,8 +396,8 @@ hr {
   color: #b0b3c0;
   font-size: 13px;
   overflow-y: auto;
+  margin-top: 15px;
 }
-
 .complexity {
   margin-top: 20px;
   color: #b0b3c0;
